--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
